tests/errors/type_mismatch.orus
// Test type mismatch error handling

fn main() {
    let a: i64 = 10
    let b: bool = true

    print("Type Mismatch Test:")
    print("Attempting to add an integer and a boolean...")

    // This should produce a compilation error
    let result = a + b

    print("Using compatible types instead:")
    let c: i64 = 20
    let result = a + c
    print(result)
}


